2016-03-18 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/: reverting to previous release

2016-03-17 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/tcl.m4,install-sh,ltmain.sh,libtool.m4: updating autotools 
    and libtool macros to the latest versions available

2016-02-16 Massimo Manghi <mxmanghi@apache.org>
    * src/doc/xml/lazybridge.xml: further elaboration of the lazy bridge

2016-02-05 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: removed code implmenting the old
    model of inter thread communication. This should fix the problem of
    redundant mutex/cond variable creation/destruction needed by the former
    model to avoid memory leaks

2016-02-01 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: upon process shutdown thread status 
    has to be set to 'init' to force thread exit

2016-01-25 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivetInspect.c: adding handling of the MpmBridge directive
    to the ::rivet::inspect command
    * doc/xml/lazybridge.xml: more development to lazy bridge manual page
    * rivet/packages/calendar/: preparing new version of package calendar

2016-01-19 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: removed unused field structures, boolean
    for process shutdown moved to process wide module status
    * doc/lazybridge.xml: started documentation of the lazy bridge

2016-01-17 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: removed variable needed only when built with
    the old thread communication model

2016-01-14 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: new communication method between bridge
    controlled Tcl threads and handler threads. This method was inspired by
    the experiment done with the lazy bridge and proved to have simpler code
    and avoids the need to rely on the handler thread memory pool that gets
    destroyed too often