@@ -1,3 +1,6 @@
+2016-06-16 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/commands.xml: rephrasing the ::rivet::catch manual page
+
 2016-03-18 Massimo Manghi <mxmanghi@apache.org>
     * tclconfig/: reverting to previous release
 
